load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "encryption_options_gen",
    src = "encryption_options.idl",
)

idl_generator(
    name = "keystore_metadata_gen",
    src = "keystore_metadata.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "encryption_key_manager_gen",
    src = "encryption_key_manager.idl",
)

idl_generator(
    name = "log_redact_options_gen",
    src = "log_redact_options.idl",
)

idl_generator(
    name = "decrypt_tool_options_gen",
    src = "decrypt_tool_options.idl",
)

mongo_cc_library(
    name = "log_redact_options",
    srcs = [
        "log_redact_options.cpp",
        "log_redact_options_gen",
    ],
    hdrs = [
        "log_redact_options.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_library(
    name = "key_acquisition",
    srcs = [
        "encryption_key_acquisition.cpp",
    ],
    hdrs = [
        "encryption_key_acquisition.h",
    ],
    deps = [
        "//src/mongo/db/auth:security_file",
        "//src/mongo/db/modules/enterprise/src/kmip",
    ],
)

mongo_cc_library(
    name = "keystore_metadata",
    srcs = [
        "keystore_metadata.cpp",
        "keystore_metadata_gen",
    ],
    hdrs = [
        "keystore_metadata.h",
    ],
    deps = [
        ":symmetric_crypto_enterprise",
        "//src/mongo/crypto:symmetric_crypto",
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context",
        "//src/mongo/db/storage:storage_engine_metadata",
    ],
)

mongo_cc_library(
    name = "encryption_key_manager_aux",
    srcs = [
        "encryption_key_manager_init.cpp",
        "encryption_server_status.cpp",
    ],
    local_defines = select({
        "@platforms//os:macos": ["DISABLE_GCM_TESTVECTORS"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":encryptdb",
        ":symmetric_crypto_enterprise",
        "//src/mongo/db:shard_role_api",
        "//src/mongo/db/commands:server_status_core",
    ],
)

mongo_cc_library(
    name = "encryptdb",
    srcs = [
        "encrypted_data_protector.cpp",
        "encryption_key_manager.cpp",
        "encryption_key_manager_gen",
        "keystore.cpp",
        "keystore_data_store.cpp",
        "wiredtiger_encryption_callbacks.cpp",
    ],
    hdrs = [
        "encrypted_data_protector.h",
        "encryption_key_manager.h",
        "keystore.h",
        "keystore_data_store.h",
    ],
    local_defines = select({
        "@platforms//os:macos": ["DISABLE_GCM_TESTVECTORS"],
        "//conditions:default": [],
    }),
    target_compatible_with = select({
        "//bazel/config:use_wiredtiger_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":key_acquisition",
        ":keystore_metadata",
        ":symmetric_crypto_enterprise",
        "//src/mongo/crypto:symmetric_crypto",
        "//src/mongo/db:server_base",
        "//src/mongo/db/catalog:catalog_impl",
        "//src/mongo/db/storage:encryption_hooks",
        "//src/mongo/db/storage:storage_options",
        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
        "//src/third_party/wiredtiger",
    ],
)

mongo_cc_library(
    name = "symmetric_crypto_enterprise",
    srcs = [
        "encryption_options.cpp",
        "encryption_options_gen",
        "symmetric_crypto.cpp",
        "symmetric_crypto_smoke.cpp",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_options.cpp",
    ],
    hdrs = [
        "encryption_options.h",
        "symmetric_crypto.h",
        "symmetric_crypto_smoke.h",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_consts.h",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_options.h",
    ],
    target_compatible_with = select({
        "//bazel/config:enterprise_feature_audit_enabled": [],
        "//bazel/config:enterprise_feature_encryptdb_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":log_redact_options",
        "//src/mongo/base:secure_allocator",
        "//src/mongo/crypto:symmetric_crypto",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_configuration",
        "//src/mongo/util:secure_zero_memory",
        "//src/mongo/util/net:ssl_manager",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_unit_test(
    name = "enterprise_encryptdb_test",
    srcs = [
        "encryption_key_manager_noop.h",
        "encryption_layout_test.cpp",
        "keystore_metadata_test.cpp",
        "keystore_test.cpp",
        "remove_saver_test.cpp",
    ],
    local_defines = select({
        "@platforms//os:macos": ["DISABLE_GCM_TESTVECTORS"],
        "//conditions:default": [],
    }),
    tags = ["mongo_unittest_third_group"],
    deps = [
        ":encryptdb",
        ":keystore_metadata",
        ":symmetric_crypto_enterprise",
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context_test_fixture",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/db/modules/enterprise/src/kmip",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_configuration",
        "//src/mongo/db/storage:remove_saver",
        "//src/mongo/db/storage:storage_options",
        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
        "//src/mongo/rpc",
        "//src/mongo/util/net:network",
    ],
)

mongo_cc_unit_test(
    name = "enterprise_encryptdb_noubsan_test",
    srcs = [
        "encryption_key_manager_noop.h",
        "wiredtiger_encryption_test.cpp",
    ],
    local_defines = select({
        "@platforms//os:macos": ["DISABLE_GCM_TESTVECTORS"],
        "//conditions:default": [],
    }),
    tags = ["mongo_unittest_third_group"],
    target_compatible_with = select({
        "//bazel/config:ubsan_enabled": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":encryptdb",
        ":symmetric_crypto_enterprise",
        "//src/mongo/db:service_context_d_test_fixture",
        "//src/mongo/db:shard_role_api",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/db/auth:security_file",
        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
        "//src/mongo/util/net:network",
    ],
)

mongo_cc_binary(
    name = "mongodecrypt",
    srcs = [
        "decrypt_tool.cpp",
        "decrypt_tool_options.cpp",
        "decrypt_tool_options.h",
        "decrypt_tool_options_gen",
        "encrypted_data_protector.h",
        "//src/mongo/db/storage:data_protector.h",
    ],
    # env.WindowsResourceFile("decrypt_tool.rc"),
    tags = [
        "dist_test",
    ],
    deps = [
        "key_acquisition",
        "symmetric_crypto_enterprise",
        "//src/mongo/crypto:symmetric_crypto",
        "//src/mongo/db:log_process_details",
        "//src/mongo/db:server_base",
        "//src/mongo/db/concurrency:lock_manager",
        "//src/mongo/db/modules/enterprise/src/kmip",
        "//src/mongo/util:signal_handlers",
        "//src/mongo/util:version_impl",
        "//src/mongo/util/options_parser:options_parser_init",
    ],
)
