load("//bazel:mongo_src_rules.bzl", "mongo_cc_library", "mongo_cc_unit_test")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "file_copy_based_initial_syncer",
    srcs = [
        "backup_file_cloner.cpp",
        "file_copy_based_initial_syncer.cpp",
        "initial_sync_file_mover.cpp",
    ],
    hdrs = [
        "backup_file_cloner.h",
        "file_copy_based_initial_syncer.h",
        "initial_sync_file_mover.h",
    ],
    tags = ["compile_requires_large_memory_gcc"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo:base",
        "//src/mongo/db:dbhelpers",
        "//src/mongo/db:service_context",
        "//src/mongo/db:startup_recovery",
        "//src/mongo/db/catalog:catalog_control",
        "//src/mongo/db/concurrency:exception_util",
        "//src/mongo/db/index_builds:index_builds_coordinator",
        "//src/mongo/db/modules/enterprise/src/hot_backups",
        "//src/mongo/db/query/client_cursor:cursor_server_params",
        "//src/mongo/db/repl:initial_syncer",
        "//src/mongo/db/repl:repl_server_parameters",
        "//src/mongo/db/repl:replication_auth",
        "//src/mongo/db/storage:storage_engine_common",
        "//src/mongo/db/storage:storage_file_util",
        "//src/mongo/db/storage:storage_options",
        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
        "//src/mongo/db/transaction",
        "//src/mongo/executor:scoped_task_executor",
        "//src/mongo/util:progress_meter",
        "//src/mongo/watchdog",
    ],
)

mongo_cc_unit_test(
    name = "file_copy_based_initial_syncer_test",
    srcs = [
        "backup_file_cloner_test.cpp",
        "file_copy_based_initial_syncer_test.cpp",
        "//src/mongo/db/repl:replication_recovery_mock.h",
    ],
    tags = ["mongo_unittest_third_group"],
    deps = [
        ":file_copy_based_initial_syncer",
        "//src/mongo:base",
        "//src/mongo/db:service_context_d_test_fixture",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/db/index_builds:index_builds_coordinator_mongod",
        "//src/mongo/db/query/client_cursor",
        "//src/mongo/db/repl:cloner_test_fixtures",
        "//src/mongo/db/repl:data_replicator_external_state_mock",
        "//src/mongo/db/repl:repl_server_parameters",
        "//src/mongo/db/repl:replmocks",
        "//src/mongo/db/repl:sync_source_selector_mock",
        "//src/mongo/db/repl:task_executor_mock",
        "//src/mongo/db/storage:backup_block",
        "//src/mongo/db/storage:backup_cursor_hooks",
        "//src/mongo/db/storage:storage_options",
        "//src/mongo/db/storage/devnull:storage_devnull_core",
        "//src/mongo/dbtests:mocklib",
        "//src/mongo/executor:thread_pool_task_executor_test_fixture",
        "//src/mongo/watchdog:watchdog_mock",
    ],
)

mongo_cc_unit_test(
    name = "initial_sync_file_mover_test",
    srcs = [
        "initial_sync_file_mover_test.cpp",
    ],
    tags = ["mongo_unittest_third_group"],
    deps = [
        ":file_copy_based_initial_syncer",
    ],
)
