load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "fips_flag_server_gen",
    src = "fips_flag_server.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "fips_flag_client_gen",
    src = "fips_flag_client.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)
