load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "fips_flag_server_gen",
    src = "fips_flag_server.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "fips_flag_client_gen",
    src = "fips_flag_client.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "fips_mode_general",
    srcs = [
        "fips_flag.cpp",
    ],
    deps = [
        "//src/mongo/db/auth:sasl_options",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_library(
    name = "fips_mode_client",
    srcs = [
        "fips_flag_client_gen",
    ],
    target_compatible_with = select({
        "//bazel/config:js_engine_none": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":fips_mode_general",
        "//src/mongo/util/net:ssl_options_client",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_library(
    name = "fips_mode_server",
    srcs = [
        "fips_flag_server_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "fips_mode_general",
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth:auth_options",
        "//src/mongo/db/auth:cluster_auth_mode",
        "//src/mongo/util/net:ssl_options_server",
        "//src/mongo/util/options_parser",
    ],
)
