load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "backup_cursor_parameters_gen",
    src = "backup_cursor_parameters.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "document_source_backup_file_gen",
    src = "document_source_backup_file.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)
