load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "ldap_parameters_gen",
    src = "ldap_parameters.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "ldap_options_gen",
    src = "ldap_options.idl",
)

idl_generator(
    name = "ldap_runtime_parameters_gen",
    src = "ldap_runtime_parameters.idl",
)

idl_generator(
    name = "ldap_options_mongod_gen",
    src = "ldap_options_mongod.idl",
)

idl_generator(
    name = "ldap_user_cache_poller_gen",
    src = "ldap_user_cache_poller.idl",
)

idl_generator(
    name = "ldap_tool_options_gen",
    src = "ldap_tool_options.idl",
)

mongo_cc_library(
    name = "ldap_parameters",
    srcs = [
        ":ldap_parameters_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)
