load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "ldap_parameters_gen",
    src = "ldap_parameters.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "ldap_options_gen",
    src = "ldap_options.idl",
)

idl_generator(
    name = "ldap_runtime_parameters_gen",
    src = "ldap_runtime_parameters.idl",
)

idl_generator(
    name = "ldap_options_mongod_gen",
    src = "ldap_options_mongod.idl",
)

idl_generator(
    name = "ldap_user_cache_poller_gen",
    src = "ldap_user_cache_poller.idl",
)

idl_generator(
    name = "ldap_tool_options_gen",
    src = "ldap_tool_options.idl",
)

mongo_cc_library(
    name = "ldap_parameters",
    srcs = [
        ":ldap_parameters_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)

mongo_cc_library(
    name = "ldap_manager",
    srcs = [
        "ldap_manager.cpp",
        "ldap_options.cpp",
        "ldap_options_gen",
    ],
    hdrs = [
        "ldap_manager.h",
        "ldap_options.h",
    ],
    deps = [
        "ldap_query",
        "//src/mongo/base:secure_allocator",
        "//src/mongo/db:service_context",
        "//src/mongo/db/auth:sasl_options",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_library(
    name = "ldap_query",
    srcs = [
        "ldap_connection_options.cpp",
        "ldap_host.cpp",
        "ldap_query.cpp",
        "ldap_query_config.cpp",
    ],
    hdrs = [
        "ldap_connection_options.h",
        "ldap_host.h",
        "ldap_query.h",
        "ldap_query_config.h",
        "ldap_type_aliases.h",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/base:secure_allocator",
        "//src/mongo/util:pcre_wrapper",
        "//src/mongo/util/net:network",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_library(
    name = "ldap_connection",
    srcs = [
        "ldap_resolver_cache.cpp",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection_factory.cpp",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection_helpers.cpp",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection_reaper.cpp",
    ] + select({
        "@platforms//os:windows": ["//src/mongo/db/modules/enterprise/src/ldap/connections:windows_ldap_connection.cpp"],
        "//conditions:default": ["//src/mongo/db/modules/enterprise/src/ldap/connections:openldap_connection.cpp"],
    }),
    hdrs = [
        "ldap_resolver_cache.h",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection.h",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection_factory.h",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection_helpers.h",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_connection_reaper.h",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:ldap_session_id.h",
        "//src/mongo/util:strong_weak_finish_line.h",
        "//src/mongo/util:tick_source_mock.h",
    ] + select({
        "@platforms//os:windows": ["//src/mongo/db/modules/enterprise/src/ldap/connections:windows_ldap_connection.h"],
        "//conditions:default": ["//src/mongo/db/modules/enterprise/src/ldap/connections:openldap_connection.h"],
    }),
    linkopts = select({
        "@platforms//os:windows": ["Wldap32.lib"],
        "//conditions:default": [
            "-lldap",
            "-llber",
        ],
    }),
    deps = [
        "ldap_manager",
        "ldap_parameters",
        ":ldap_query",
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth:user_acquisition_stats",
        "//src/mongo/db/commands:server_status_core",
        "//src/mongo/executor:connection_pool_executor",
        "//src/mongo/util:alarm",
        "//src/mongo/util:dns_query",
        "//src/mongo/util:fail_point",
        "//src/mongo/util/concurrency:thread_pool",
        "//src/mongo/util/net:network",
    ],
)

mongo_cc_library(
    name = "ldap_manager_init",
    srcs = [
        "ldap_manager_init.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "ldap_manager_impl",
        "ldap_parameters",
        "//src/mongo/db:service_context",
        "//src/mongo/db/commands:server_status_core",
    ],
)

mongo_cc_library(
    name = "ldap_manager_impl",
    srcs = [
        "ldap_manager_impl.cpp",
        "ldap_runner_impl.cpp",
        "ldap_runtime_parameters.cpp",
        "ldap_runtime_parameters_gen",
    ],
    hdrs = [
        "ldap_manager_impl.h",
        "ldap_runner_impl.h",
    ],
    deps = [
        "ldap_connection",
        "ldap_manager",
        "ldap_name_map",
        "ldap_query",
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth",
        "//src/mongo/db/commands:test_commands_enabled",
    ],
)

mongo_cc_library(
    name = "ldap_name_map",
    srcs = [
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:internal_to_ldap_user_name_mapper.cpp",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:ldap_rewrite_rule.cpp",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:regex_rewrite_rule.cpp",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:rewrite_rule.cpp",
    ],
    hdrs = [
        "ldap_runner.h",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:internal_to_ldap_user_name_mapper.h",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:ldap_rewrite_rule.h",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:regex_rewrite_rule.h",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:rewrite_rule.h",
        "//src/mongo/util:tick_source_mock.h",
    ],
    deps = [
        "ldap_parameters",
        "ldap_query",
        "//src/mongo:base",
        "//src/mongo/db:service_context",
        "//src/mongo/util:pcre_wrapper",
    ],
)

mongo_cc_library(
    name = "ldap_options_mongod",
    srcs = [
        "ldap_options_mongod_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "ldap_manager_impl",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_library(
    name = "ldap_health_observer",
    srcs = [
        "ldap_health_observer.cpp",
    ],
    hdrs = [
        "ldap_health_observer.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "ldap_connection",
        "ldap_manager",
        "ldap_manager_impl",
        "ldap_query",
        "//src/mongo/db/process_health:fault_manager",
    ],
)

mongo_cc_library(
    name = "mongo_ldap",
    srcs = [
        "authorization_backend_ldap.cpp",
        "ldap_user_cache_poller.cpp",
        "ldap_user_cache_poller_gen",
    ],
    hdrs = [
        "authorization_backend_ldap.h",
        "ldap_user_cache_poller.h",
    ],
    deps = [
        "ldap_manager_impl",
        "ldap_name_map",
        "ldap_query",
        "//src/mongo/bson/mutable:mutable_bson",
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth",
        "//src/mongo/db/auth:auth_impl_internal",
        "//src/mongo/db/auth:authserver",
        "//src/mongo/util:background_job",
    ],
)

mongo_cc_unit_test(
    name = "enterprise_ldap_test",
    srcs = [
        "ldap_connection_options_test.cpp",
        "ldap_health_observer_test.cpp",
        "ldap_query_test.cpp",
        "ldap_runner_mock.h",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:rewrite_rule_test.cpp",
    ],
    tags = ["mongo_unittest_first_group"],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":ldap_health_observer",
        ":ldap_manager_impl",
        ":ldap_name_map",
        ":ldap_query",
        "//src/mongo/db:service_context",
        "//src/mongo/db/auth",
        "//src/mongo/db/process_health:fault_manager_test_suite",
        "//src/mongo/executor:task_executor_test_fixture",
        "//src/mongo/executor:thread_pool_task_executor_test_fixture",
        "//src/mongo/idl:server_parameter_test_util",
        "//src/mongo/util:clock_source_mock",
    ],
)

mongo_cc_binary(
    name = "mongoldap",
    srcs = [
        "ldap_tool.cpp",
        "ldap_tool_options.cpp",
        "ldap_tool_options.h",
        "ldap_tool_options_gen",
    ],
    # + env.WindowsResourceFile("ldap_tool.rc"),
    tags = [
        "dist_test",
    ],
    deps = [
        "ldap_manager",
        "ldap_manager_impl",
        "ldap_options_mongod",
        "ldap_query",
        "//src/mongo:base",
        "//src/mongo/base:secure_allocator",
        "//src/mongo/client:native_sasl_client",
        "//src/mongo/db:log_process_details",
        "//src/mongo/db:service_context_non_d",
        "//src/mongo/db/modules/enterprise/src/util:report_tool",
        "//src/mongo/util:dns_query",
        "//src/mongo/util:signal_handlers",
        "//src/mongo/util:version_impl",
        "//src/mongo/util/net:http_client_impl",
        "//src/mongo/util/options_parser:options_parser_init",
    ],
)
