load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "collection_properties_gen",
    src = "collection_properties.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "collection_properties",
    srcs = [
        ":collection_properties_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)
