load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "collection_properties_gen",
    src = "collection_properties.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "collection_properties",
    srcs = [
        ":collection_properties_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)

mongo_cc_library(
    name = "import_collection_coordinator",
    srcs = [
        "import_collection_coordinator.cpp",
    ],
    hdrs = [
        "import_collection_coordinator.h",
    ],
    deps = [
        "//src/mongo:base",  # TODO(SERVER-98376): Remove.
        "//src/mongo/db:service_context",
        "//src/mongo/db/catalog:commit_quorum_options",  # TODO(SERVER-98376): Remove.
        "//src/mongo/db/repl:repl_coordinator_interface",  # TODO(SERVER-98376): Remove.
    ],
)
